# hdx-scraper-eve

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-tests.yaml
src/hdx/scraper/eve/: __main__.py  eve.py
src/hdx/scraper/eve/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_eve.py
tests/fixtures/input/: filtered-data.json  latest-data.json
