#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-eve"
requires-python = ">=3.12"
dependencies = [
  "hdx-python-api",
  "hdx-python-utilities",
  "arcgis>=2.0.0,<3.0.0",
  "dotenv",
  "krb5",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.eve.__main__:main"
